# Magnet

./: .clang-format  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  license.md  main.cpp  readme.md
assets/secure/: read_me.txt
core/: Application.cpp  ApplicationContext.cpp  AssetManager.cpp  AudioManager.cpp  CMakeLists.txt  Common.cpp  Components.cpp  Scene.cpp  SceneManager.cpp  Time.cpp  application.cpp  application.hpp  components.hpp  scene.cpp  scene_mgr.cpp  scene_mgr.hpp  stdafx.hpp
core/GFX/: CMakeLists.txt  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  Shaders.cpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  glad.c
core/GFX/UI/: CMakeLists.txt  Nuklear.cpp  UserInterface.cpp  UserInterface.hpp  imgui_draw.cpp  imgui_impl_opengl3.cpp
core/GFX/UI/widgets/: CMakeLists.txt  DevTools.cpp
core/IO/: ArchiveManager.cpp  AssetFactory.cpp  AssetManager.cpp  AssetTypes.cpp  CMakeLists.txt  FallbackAssets.hpp  Input.cpp  InputManager.cpp  Library.cpp  Loaders.cpp
core/SFX/: ALBackend.cpp  ALBackend.hpp  AudioManager.cpp  CMakeLists.txt  EfxPresetList.cpp  EfxPresetList.h  EfxPresetList.hpp  OpenAL.cpp  OpenAL.hpp
core/UTILS/: AssetFactory.cpp  CMakeLists.txt  Geometry.cpp  Time.cpp
core/assets/: read_me.txt
core/assets/models/: AudioSource.glb  fallback.glb
core/assets/scripts/: ecs.lua
core/assets/shaders/: base.frag  base.vert  frag.glsl  nk.frag  nk.vert  skybox.frag  skybox.vert  temp.frag  temp.vert  vert.glsl
core/components/: transform.hpp
core/gfx/: Renderer.cpp  ShaderManager.cpp  UI.cpp  WindowManager.cpp  glad.c  renderer.cpp  renderer.hpp  shader_manager.hpp  shader_mgr.cpp  shader_mgr.hpp  window.cpp  window.hpp  windowManager.cpp
core/gfx/GUI/: Interface.cpp  Nuklear.cpp
core/gfx/GUI/widgets/: Console.cpp
core/gfx/UI/: CMakeLists.txt  Interface.cpp  Nuklear.cpp  UI.cpp
core/gfx/UI/widgets/: Console.cpp  DevTools.cpp
core/include/magnet/: ApplicationContext.hpp  AssetManager.hpp  Components.hpp  GUI.hpp  Interface.hpp  Renderer.hpp  ShaderManager.hpp  UI.hpp  WindowManager.hpp
core/include/magnetar/: ApplicationContext.hpp  AssetManager.hpp  Components.hpp  Renderer.hpp  ShaderManager.hpp  WindowManager.hpp
core/io/: AssetManager.cpp  asset_manager.hpp  asset_mgr.cpp
core/public/magnet/: Application.hpp  ApplicationContext.hpp  ArchiveManager.hpp  AssetFactory.hpp  AssetManager.hpp  AudioManager.hpp  Components.hpp  Geometry.hpp  Input.hpp  InputManager.hpp  Library.hpp  Renderer.hpp  Rendering.hpp  Scene.hpp  SceneManager.hpp  ShaderManager.hpp  Shaders.hpp  Time.hpp  UserInterface.hpp  Widgets.hpp  WindowManager.hpp
core/scripting/: flecs_lua.h
core/ui/: interface.cpp  interface.hpp  nk_gl4.h
game/: CMakeLists.txt  glad.c  main.cpp
include/: imconfig.h  implot.h  nuklear.h  nuklear_glfw_gl4.h  qoi.h  stb_vorbis.h
include/glad/: glad.h
projects/: CMakeLists.txt
projects/00_barebones/: CMakeLists.txt  main.cpp
projects/sandbox/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
projects/sandbox/assets/: read_me.txt
projects/sandbox/assets/secure/: read_me.txt
samples/: CMakeLists.txt
samples/00_barebones/: CMakeLists.txt  main.cpp
samples/01_primitives/: CMakeLists.txt  main.cpp
samples/01_primitives/assets/: cone.glb  cone.stl  cube.glb  cylinder.stl  pyramid.stl  sphere.glb  spheroid.stl  torus.stl
samples/02_native_ui/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
samples/sandbox/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
samples/sound_playground/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  asset_manager.cpp  game_state.cpp  main.cpp  stdafx.hpp
src/app/: app.hpp
src/core/: CMakeLists.txt
src/core/gfx/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  window.cpp  window.hpp
src/core/io/: asset_manager.cpp  asset_manager.hpp  assets.cpp  assets.hpp  input.hpp
src/gfx/: shader.cpp  shader.hpp  window.cpp  window.hpp
src/io/: assets.cpp  assets.hpp  input.cpp  input.hpp
src/shaders/: frag.glsl
submodules/: CMakeLists.txt
