set(CMAKE_WARN_DEPRECATED FALSE)

add_subdirectory(cglm        EXCLUDE_FROM_ALL)
add_subdirectory(flecs       EXCLUDE_FROM_ALL)
add_subdirectory(freetype    EXCLUDE_FROM_ALL)
add_subdirectory(glfw        EXCLUDE_FROM_ALL)
add_subdirectory(libarchive  EXCLUDE_FROM_ALL)
add_subdirectory(Lua         EXCLUDE_FROM_ALL)
add_subdirectory(spdlog      EXCLUDE_FROM_ALL)
add_subdirectory(tweeny      EXCLUDE_FROM_ALL)
add_subdirectory(openal-soft EXCLUDE_FROM_ALL)